# hyper-staticfile

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
examples/: doc_server.rs
src/: body.rs  lib.rs  requested_path.rs  resolve.rs  response_builder.rs  service.rs  static_service.rs  vfs.rs
src/util/: body.rs  date_time.rs  file_bytes_stream.rs  file_chunk_stream.rs  file_response_builder.rs  mod.rs  open_with_metadata.rs  requested_path.rs
tests/: hyper.rs  static.rs
